[tool.poetry]
name = "parallax_animator"
version = "0.1.0"
description = ""
authors = ["Alexander Konshin"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
opencv-python = "^4.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
